# django-hexagonal-arch

./: .gitignore  .pre-commit-config.yaml  docker-compose.yaml  manage.py  mypy.ini  pyproject.toml  pytest.ini
cart/: models.py  serializers.py  tests.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_cart_cartitems.py
consumerdemo/: asgi.py  settings.py  urls.py  wsgi.py
orders/: domain.py  load_data.py  models.py  serializers.py  urls.py  views.py
orders/migrations/: 0001_initial.py
