[tool.poetry]
name = "django-consumer"
version = "0.1.0"
description = ""
authors = ["Robert Jackiewicz <robert.jackiewicz@carta.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
psycopg2 = "^2.9.3"
djangorestframework = "^3.13.1"
ipython = "^8.0.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
mypy = "^0.931"
django-stubs = "^1.9.0"
djangorestframework-stubs = "^1.4.0"
Faker = "^13.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
